--- a/_config.yml
+++ b/_config.yml
@@ -21,3 +21,8 @@ defaults:
   values:
     layout: page
 permalink: pretty
+description: |
+  A cross-disciplinary research initiative on medical device security, privacy, safety, and effectiveness
+twitter_username: ARC_MedSec
+github_username: Jonesy
+linkedin_username: https://linkedin.com/
