--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 ---
-title: MedSec101
+title: Medical Device Security 101 Conference
 timezone: UTC
 collections:
   posts:
@@ -32,3 +32,6 @@ description: |
 twitter_username: ARC_MedSec
 github_username: Jonesy
 linkedin_username: https://linkedin.com/
+
+conference_dates: January 15 - 17, 2017
+conference_location: Lake Buena Vista, FL
