Move the home banner text into the site config.

--- a/_config.yml
+++ b/_config.yml
@@ -56,3 +56,5 @@ linkedin_username: https://linkedin.com/
 conference_dates: January 15 - 17, 2017
 conference_location: Lake Buena Vista, FL
 url: https://www.medicalsecurity101.org
+home_banner_dates:
+  Early bird rate closes <span class="text-danger">Nov 14</span>
